--- a/git_homework/Module2/week_1/w9d2_hmwk/student_labs/dashboard/package.json
+++ b/git_homework/Module2/week_1/w9d2_hmwk/student_labs/dashboard/package.json
@@ -16,9 +16,11 @@
     "@angular/compiler": "~10.1.0",
     "@angular/core": "~10.1.0",
     "@angular/forms": "~10.1.0",
+    "@angular/material": "^10.1.0",
     "@angular/platform-browser": "~10.1.0",
     "@angular/platform-browser-dynamic": "~10.1.0",
     "@angular/router": "~10.1.0",
+    "bootstrap": "^3.4.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
